fix: caminho das rotas na doc
